Edit publications tab to highlight my name in the author list

--- a/_publications/cvpr2024.md
+++ b/_publications/cvpr2024.md
@@ -1,5 +1,5 @@
 ---
-layout: publication
+layout: archive
 title: "Spectral and Polarization Vision: Spectro-polarimetric Real-world Dataset"
 authorlist: "Yujin Jeon*, Eunsue Choi*, Youngchan Kim, Yunseong Moon, Khalid Omer, Felix Heide, Seung-Hwan Baek"
 venue: "CVPR2024"
